--- a/src/sample/stuList.fxml
+++ b/src/sample/stuList.fxml
@@ -189,7 +189,7 @@
                      </font>
                   </Text>
                   <ListView fx:id="teachingCourse" layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.bottomAnchor="100.0" AnchorPane.leftAnchor="10.0" />
-                  <JFXButton fx:id="addCourseButton1" layoutX="38.0" layoutY="354.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Remove Course" textFill="WHITE" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="450.0">
+                  <JFXButton fx:id="removeCourseButton" layoutX="38.0" layoutY="354.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Remove Course" textFill="WHITE" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="450.0">
                      <font>
                         <Font size="14.0" />
                      </font>
