--- a/src/sample/courseReg.fxml
+++ b/src/sample/courseReg.fxml
@@ -126,7 +126,7 @@
                      </children>
                   </HBox>
                   <ListView fx:id="courseList" prefHeight="200.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.leftAnchor="10.0" AnchorPane.topAnchor="140.0" />
-                  <JFXButton fx:id="addCourseButton" layoutX="28.0" layoutY="344.0" onMouseClicked="#registeredcourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Add Course" textFill="WHITE" AnchorPane.leftAnchor="358.0" AnchorPane.topAnchor="345.0">
+                  <JFXButton fx:id="addCourseButton" layoutX="28.0" layoutY="344.0" onMouseClicked="#addcourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Add Course" textFill="WHITE" AnchorPane.leftAnchor="358.0" AnchorPane.topAnchor="345.0">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -137,7 +137,7 @@
                      </font>
                   </Text>
                   <ListView fx:id="courseSuggestion" layoutX="10.0" layoutY="10.0" prefHeight="150.0" prefWidth="440.0" style="-fx-fixed-cell-size: 30;" AnchorPane.bottomAnchor="60.0" AnchorPane.leftAnchor="10.0" />
-                  <JFXButton fx:id="removeCourseButton" layoutX="38.0" layoutY="354.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Remove Course" textFill="WHITE" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="20.0">
+                  <JFXButton fx:id="removeCourseButton" layoutX="38.0" layoutY="354.0" onMouseClicked="#removecourse" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Remove Course" textFill="WHITE" AnchorPane.bottomAnchor="60.0" AnchorPane.rightAnchor="20.0">
                      <font>
                         <Font size="14.0" />
                      </font>
