change printer to download icon

--- a/src/sample/courseReg.fxml
+++ b/src/sample/courseReg.fxml
@@ -144,7 +144,7 @@
                   </JFXButton>
                   <ImageView fx:id="printPreview" fitHeight="25.0" fitWidth="25.0" layoutX="332.0" layoutY="333.0" onMouseClicked="#printPreview" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: hand;" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="60.0">
                      <image>
-                        <Image url="@images/printer.png" />
+                        <Image url="@images/download.png" />
                      </image>
                   </ImageView>
                   <Text layoutX="28.0" layoutY="93.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Registered Course" AnchorPane.leftAnchor="460.0" AnchorPane.topAnchor="60.0">
