--- a/src/sample/login.fxml
+++ b/src/sample/login.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.PasswordField?>
@@ -80,19 +81,19 @@
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <TextField layoutX="150.0" layoutY="260.0" prefHeight="26.0" prefWidth="350.0" promptText="*@usm.my or any *.usm.my subdomains" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;">
+            <TextField fx:id="matricNo" layoutX="150.0" layoutY="260.0" prefHeight="26.0" prefWidth="350.0" promptText="Matric Number" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="18.0" />
                </font>
             </TextField>
-            <PasswordField layoutX="150.0" layoutY="330.0" prefHeight="26.0" prefWidth="350.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;">
+            <PasswordField fx:id="password" layoutX="150.0" layoutY="330.0" prefHeight="26.0" prefWidth="350.0" promptText="Password" style="-fx-background-color: transparent; -fx-border-color: linear-gradient(to right top, #3c047c, #8e0070, #c2005b, #e04644, #eb7e31); -fx-border-width: 0px 0px 2px 0px;">
                <font>
                   <Font size="18.0" />
                </font>
             </PasswordField>
             <ImageView fitHeight="45.0" fitWidth="45.0" layoutX="95.0" layoutY="263.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/email.png" />
+                  <Image url="@images/user.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="95.0" layoutY="330.0" pickOnBounds="true" preserveRatio="true">
@@ -100,17 +101,17 @@
                   <Image url="@images/padlock.png" />
                </image>
             </ImageView>
-            <Hyperlink layoutX="240.0" layoutY="582.0" onMouseClicked="#ContactUs" text="Change Password" textAlignment="CENTER">
+            <Hyperlink layoutX="238.0" layoutY="582.0" onMouseClicked="#ContactUs" text="Change Password" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
             </Hyperlink>
-            <Hyperlink layoutX="238.0" layoutY="610.0" onMouseClicked="#ContactUs" text="Forgot Account ID" textAlignment="CENTER">
+            <Hyperlink layoutX="237.0" layoutY="610.0" onMouseClicked="#ContactUs" text="Forgot Account ID" textAlignment="CENTER">
                <font>
                   <Font size="18.0" />
                </font>
             </Hyperlink>
-            <RadioButton fx:id="rbStudent" layoutX="165.0" layoutY="416.0" mnemonicParsing="false" text="Student">
+            <RadioButton fx:id="rbStudent" layoutX="180.0" layoutY="470.0" mnemonicParsing="false" text="Student">
                <font>
                   <Font size="18.0" />
                </font>
@@ -118,7 +119,7 @@
                   <ToggleGroup fx:id="studentLecturer" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="rbLecturer" layoutX="325.0" layoutY="416.0" mnemonicParsing="false" text="Lecturer" toggleGroup="$studentLecturer">
+            <RadioButton fx:id="rbLecturer" layoutX="340.0" layoutY="470.0" mnemonicParsing="false" text="Lecturer" toggleGroup="$studentLecturer">
                <font>
                   <Font size="18.0" />
                </font>
@@ -133,11 +134,16 @@
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton layoutX="242.5" layoutY="500.0" onMouseClicked="#SignIn" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Sign in" textFill="WHITE">
+            <JFXButton layoutX="242.5" layoutY="530.0" onMouseClicked="#SignIn" prefHeight="43.0" prefWidth="135.0" style="-fx-background-color: #EB7E31; -fx-cursor: hand;" text="Sign in" textFill="WHITE">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
+            <JFXCheckBox fx:id="showPassword" layoutX="350.0" layoutY="400.0" text="Show Password">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </JFXCheckBox>
          </children>
       </AnchorPane>
    </right>
