--- a/src/sample/signUp.fxml
+++ b/src/sample/signUp.fxml
@@ -90,7 +90,7 @@
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <RadioButton fx:id="rbStudent" layoutX="180.0" layoutY="530.0" mnemonicParsing="false" text="Student">
+            <RadioButton fx:id="rbStudent" layoutX="180.0" layoutY="530.0" mnemonicParsing="false" style="-fx-cursor: hand;" text="Student">
                <font>
                   <Font size="18.0" />
                </font>
@@ -98,7 +98,7 @@
                   <ToggleGroup fx:id="studentLecturer" />
                </toggleGroup>
             </RadioButton>
-            <RadioButton fx:id="rbLecturer" layoutX="340.0" layoutY="530.0" mnemonicParsing="false" text="Lecturer" toggleGroup="$studentLecturer">
+            <RadioButton fx:id="rbLecturer" layoutX="340.0" layoutY="530.0" mnemonicParsing="false" style="-fx-cursor: hand;" text="Lecturer" toggleGroup="$studentLecturer">
                <font>
                   <Font size="18.0" />
                </font>
@@ -128,7 +128,7 @@
                   <Font name="System Bold" size="24.0" />
                </font>
             </Text>
-            <JFXCheckBox fx:id="showPassword" checkedColor="#eb7e31" layoutX="350.0" layoutY="470.0" onAction="#TriggerPasswordCheckBox" text="Show Password">
+            <JFXCheckBox fx:id="showPassword" checkedColor="#eb7e31" layoutX="350.0" layoutY="470.0" onAction="#TriggerPasswordCheckBox" style="-fx-cursor: hand;" text="Show Password">
                <font>
                   <Font size="18.0" />
                </font>
