--- a/src/sample/courseReg.fxml
+++ b/src/sample/courseReg.fxml
@@ -201,7 +201,7 @@
                                           <Font size="14.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets left="10.0" right="10.0" />
+                                          <Insets bottom="10.0" left="10.0" right="10.0" />
                                        </VBox.margin>
                                     </Text>
                                  </children>
